Java 17 migration (#203)
* ci: Update maven.yml

* feat: use Java 17 as minimal LTS

BREAKING CHANGE: Java 11 LTS support dropped

* perf: use more recent dependencies

* docs: Update README.md

* perf: replace Collectors.toList() by toList()

* perf: remove import import java.util.stream.Collectors;