@@ -8,7 +8,6 @@ import org.hl7.fhir.r5.model.Dosage;
 
 import java.util.ResourceBundle;
 import java.util.concurrent.CompletableFuture;
-import java.util.stream.Collectors;
 
 /**
  * R5 class for translating "asNeededBoolean" / "asNeededCodeableConcept".
@@ -79,7 +78,7 @@ public class AsNeededR5 implements AsNeeded<FDSConfigR5, Dosage> {
         var codesFutures = codes
                 .stream()
                 .map(config::fromCodeableConceptToString)
-                .collect(Collectors.toList());
+                .toList();
 
         return CompletableFuture
                 .allOf(codesFutures.toArray(CompletableFuture[]::new))
@@ -87,7 +86,7 @@ public class AsNeededR5 implements AsNeeded<FDSConfigR5, Dosage> {
                     var codesAsText = codesFutures
                             .stream()
                             .map(future -> future.getNow(""))
-                            .collect(Collectors.toList());
+                            .toList();
 
                     return ListToString.convert(bundle, codesAsText);
                 })
